# FGO-AUTO

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  VERSION  pyproject.toml
.cursor/rules/: fgo-engineering.mdc  mattpocock-skills.mdc  skill-routing.mdc  tdd-and-tests.mdc
.github/workflows/: test.yml
catalog/: README.md
docs/: manual-test-gui.md  manual-test-v0.2.md
docs/adr/: 0001-fixed-bluestacks-display-preset.md  0002-python-runtime.md  0003-window-binding.md  0004-desktop-ui-customtkinter.md  0005-configurable-display-preset.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/prd/: 0001-v1-screen-state-and-quest-loop.md  ISSUE-STATUS.md  (+1 more)
examples/: run.example.yaml  script.example.yaml
scripts/: fix_versions.py  init-local-profile.ps1  migrate_run_config.py  publish-prd-issues.ps1  setup-venv.ps1  write_run_config.py  write_run_config_shim.py
tests/: conftest.py  test_adb_input.py  test_anchor_set.py  test_catalog_service.py  test_cli.py  test_config_service.py  test_engine_v2.py  test_flow_library.py  test_friend_support_refresh.py  test_image_match.py  test_navigation_control_flow.py  test_navigation_engine.py  test_navigation_scroll.py  test_paths_catalog.py  test_quest_anchor_crop.py  test_quest_flow_service.py  test_quest_schema.py  test_run_config.py  test_run_controller.py  test_run_service.py  test_script_engine.py  test_state_catalog.py  test_state_catalog_runtime.py  test_tap_normalized.py  test_window_binder.py  test_window_click.py  test_window_click_messages.py
(+98 files in other folders)
